--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,25 +9,30 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <div class="title">
             <span id="titleText">Crystal Collector</span>
         </div>
-        <div class="instructions">      
+        <div class="instructions">
+            Instructions
         </div>
-        <div class="randGen"></div>
+        <div class="randGen">RandGen</div>
         <div class="winLoss">
-            <p class="win"></p>
-            <p class="loss"></p>
+            <p class="win">Win count</p>
+            <p class="loss"> Loss count</p>
         </div>
-        <button class="c1"></button>
-        <button class="c2"></button>
-        <button class="c3"></button>
-        <button class="c4"></button>
-        <div class="userScore">
+        <div class="buttonContainer">
+            <button class="c1">C1</button>
+            <button class="c2">C2</button>
+            <button class="c3">C3</button>
+            <button class="c4">C4</button>
+        </div>
+        <div class="userScore">User Score
         </div>
     </div>
 </body>
 <link rel="text/javascript" href="crystals.js">
+
 </html>
