changed to bootstrap css

--- a/index.html
+++ b/index.html
@@ -6,32 +6,86 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Crystal Game</title>
-    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="container">
-        <div class="title">
-            <span id="titleText">Crystal Collector</span>
+    <div class="container-fluid full-height">
+        <div class="row mt-5 ml-5">
+            <div class="col-md-6 borderSection text-center">
+                <h1 class="title mt-5 pt-3">Crystal Game</h1>
+            </div>
+            <div class="col-md-6 h-25 d-inline-block text-center">
+                <img class="c c1" src="./crystal1.jfif" alt="">
+                <img class="c c2" src="./crystal 2.jfif" alt="">
+                <img class="c c3" src="./crystal3.jfif" alt="">
+                <img class="c c4" src="./crystal4.jfif" alt="">
+            </div>
         </div>
-        <div class="instructions">
-            Instructions
+        <div class="row h-50 mt-5 text-center ml-5">
+            <div class="col-md-6 borderSection"  style="height: 100%">
+                <h2>Instructions</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos tempore odio sapiente facilis doloribus?
+                    Omnis odit, possimus temporibus ipsam doloribus officiis illo, eos voluptate laudantium nostrum
+                    corrupti, obcaecati voluptatibus tempore.
+                    Assumenda blanditiis deleniti repellat voluptatem, natus laborum ad! Molestiae, quod pariatur
+                    dignissimos, veritatis mollitia aspernatur sequi reiciendis perspiciatis sint architecto
+                    exercitationem, est reprehenderit nisi iure eaque? Nesciunt aut deleniti maxime.
+                    Voluptate esse exercitationem officiis! Enim rerum maxime vero commodi nostrum praesentium natus
+                    minus aperiam quas reprehenderit voluptatum, officia perferendis quis placeat facilis harum optio
+                    velit. Qui doloremque minus reprehenderit! Eligendi.
+                    Voluptas rem, odio in ducimus molestiae molestias. Voluptates fugiat, laborum temporibus esse qui
+                    similique quisquam sit mollitia ipsam illum tempora nihil perspiciatis sequi nisi labore
+                    repellendus, nobis ad modi quae.
+                    Explicabo itaque suscipit illo earum nemo facilis sit dolore quasi id natus voluptas similique, enim
+                    cumque delectus consectetur eum asperiores obcaecati dignissimos ab aliquid veritatis in harum
+                    laborum! Quo, distinctio!
+                    Voluptates excepturi adipisci expedita ad quibusdam, rem hic, cum dolor harum doloribus facere vel
+                    quasi nesciunt placeat a autem est, fugiat repudiandae nostrum doloremque quisquam. Obcaecati nobis
+                    recusandae expedita natus?
+                    Voluptatem enim dignissimos obcaecati optio rerum quibusdam et, nostrum delectus facere dolores
+                    aliquid sint, ab porro quia nisi minima commodi facilis vero impedit consequuntur? Ea cum doloremque
+                    illo. Itaque, ducimus.
+                    Soluta ducimus quam natus beatae recusandae error pariatur? Omnis modi tempora dolorem aperiam
+                    delectus provident non. Et nesciunt in vero. Commodi sint impedit numquam. Dolor, aperiam
+                    aspernatur. Facere, molestiae aliquam?
+                    Accusantium hic possimus aut ratione quo deserunt repudiandae quis impedit molestiae? Recusandae
+                    nulla voluptatem magnam molestias quibusdam vero omnis, dolore hic natus, ducimus vel mollitia rem
+                    perferendis impedit! Voluptate, beatae.
+                    Asperiores nisi exercitationem error, illo libero suscipit iste vitae possimus modi ad totam ab
+                    rerum quod cupiditate laboriosam omnis laborum. Illo ex molestiae suscipit magni corrupti
+                    reprehenderit vel facere officia!</p>
+            </div>
+            <div class="col-md-6 ">
+                <div class="row  h-50 ">
+                    <div class="col-md-6 offset-md-3 borderSection text-center">
+                        <p>Computer Number</p>
+                    </div>
+                </div>
+
+                <div class="row  h-50 ">
+                    <div class="col-md-6 offset-md-3 borderSection text-center">
+                        <p>Your Number</p>
+                    </div>
+                </div>
+
+            </div>
         </div>
-        <div class="randGen">RandGen</div>
-        <div class="winLoss">
-            <p class="win">Win count</p>
-            <p class="loss"> Loss count</p>
+        <div class="row mt-5 text-center h-25">
+            <div class="col-md-4 offset-md-1 h-75 borderSection">Wins</div>
+            <div class="col-md-4 offset-md-2 h-75 borderSection">Losses</div>
+
         </div>
-        <div class="buttonContainer">
-            <button class="c1">C1</button>
-            <button class="c2">C2</button>
-            <button class="c3">C3</button>
-            <button class="c4">C4</button>
-        </div>
-        <div class="userScore">User Score
-        </div>
+
+
     </div>
+
+
+
+
+
 </body>
 <link rel="text/javascript" href="crystals.js">
 
