added some basic instructions

--- a/index.html
+++ b/index.html
@@ -29,15 +29,9 @@
         <div class="row h-50 mt-5 text-center ml-5">
             <div class="col-md-6 borderSection"  style="height: 100%">
                 <h2 class="headerText">Instructions</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos tempore odio sapiente facilis doloribus?
-                    Omnis odit, possimus temporibus ipsam doloribus officiis illo, eos voluptate laudantium nostrum
-                    corrupti, obcaecati voluptatibus tempore.
-                    Assumenda blanditiis deleniti repellat voluptatem, natus laborum ad! Molestiae, quod pariatur
-                    dignissimos, veritatis mollitia aspernatur sequi reiciendis perspiciatis sint architecto
-                    exercitationem, est reprehenderit nisi iure eaque? Nesciunt aut deleniti maxime.
-                    Voluptate esse exercitationem officiis! Enim rerum maxime vero commodi nostrum praesentium natus
-                    minus aperiam quas reprehenderit voluptatum, officia perferendis quis placeat facilis harum optio
-                    velit. Qui doloremque minus reprehenderit! Eligendi.
+                <p id="instruct">Welcome to crystal game! Each Crystal has a hidden value! By clicking a crystal a Number
+                    will add to your number area, the goal of the game is to get your number to match the provided
+                    computer number! If you do you win! If your number passes the computer number you lose!
                     </p>
             </div>
             <div class="col-md-6 ">
