made data-number assignment one line instead of 4

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
     <div class="container-fluid full-height">
         <div class="row mt-5 ml-5">
-            <div class="col-md-4 offset-md-1 borderSection text-center headerText">
-                <h1 class="title mt-5 pt-3 ">Crystal Game</h1>
+            <div class="col-md-4 offset-md-1 borderSection backGround text-center headerText">
+                <h1 class="title  mt-5 pt-3 ">Crystal Game</h1>
             </div>
             <div class="col-md-6 offset-md-1 h-25 d-inline-block text-center">
                 <img class="c c1"  src="./crystal1.jfif" alt="">
@@ -27,7 +27,7 @@
             </div>
         </div>
         <div class="row h-50 mt-5 text-center ml-5">
-            <div class="col-md-6 borderSection"  style="height: 100%">
+            <div class="col-md-6 borderSection backGround"  style="height: 100%">
                 <h2 class="headerText">Instructions</h2>
                 <p id="instruct">Welcome to crystal game! Each Crystal has a hidden value! By clicking a crystal a Number
                     will add to your number area, the goal of the game is to get your number to match the provided
@@ -36,14 +36,14 @@
             </div>
             <div class="col-md-6 ">
                 <div class="row  h-50 ">
-                    <div class="col-md-6 offset-md-3 borderSection text-center">
+                    <div class="col-md-6 offset-md-3 borderSection backGround text-center">
                         <p class="headerText">Computer Number</p>
                         <p id="addNum"></p>
                     </div>
                 </div>
 
                 <div class="row  h-50 mt-3">
-                    <div class="col-md-6 offset-md-3 borderSection text-center">
+                    <div class="col-md-6 offset-md-3 borderSection backGround text-center">
                         <p class="headerText" value = "0" id="sumIt">Your Number</p>
                         <p id="yourNum"></p>
                     </div>
@@ -52,11 +52,11 @@
             </div>
         </div>
         <div class="row mt-5 text-center h-25">
-            <div class="col-md-4 offset-md-1 h-75 borderSection">
+            <div class="col-md-4 offset-md-1 h-75 borderSection backGround">
                 <p class="headerText">Wins</p>
                 <p id="win"></p>
             </div>
-            <div class="col-md-4 offset-md-2 h-75 borderSection">
+            <div class="col-md-4 offset-md-2 h-75 borderSection backGround">
                 <p class="headerText">Losses</p>
                 <p id="loss"></p>
             </div>
